<resources>
    <!--MODIFICAR O NOME DO APP NO FINAL-->
    <string name="app_name">crud_firebase</string>

    <!--Genericos-->
    <string name="text_email">E-mail</string>
    <string name="text_password">Senha</string>
    <string name="text_register_account">Criar conta</string>
    <string name="text_email_modelo">exemplo@email.com</string>
    <string name="text_senha_modelo">******</string>

    <!--Login Fragment-->
    <string name="text_btn_login_fragment">Login</string>
    <string name="text_recover_login_fragment">Recuperar conta</string>
    <string name="error_generic">Opaa! Ocorreu um erro, tente novamente mais tarde!</string>



    <!--Recouver Account Fragment-->
    <string name="text_btn_recover_account_fragment">Enviar</string>

    <!--Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada co este e-mail!</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

</resources>